# KG-RAG4NuclearIE

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt
config/: default.yaml
src/: document_loader.py  extractor.py  knowledge_graph.py  llm_client.py  main.py  pipeline.py  retriever.py
