[project]
name = "kg-rag-pipeline"
version = "0.1.0"
description = "KG-RAG pipeline for structured extraction of nuclear maintenance information"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "rank-bm25>=0.2",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "docling>=2.0",
    "pydantic>=2.0",
    "tqdm>=4.60",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
kg-rag = "src.main:main"
